  and to avoid being repeated on each graph in the 'emailreports' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz)
- Fixed a wrong example in the documentation when showing how to define the same
  port number using IPv4 and IPv6 in the 'port' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz for pointing this out)
- Small cosmetic changes.



3.7.0  - 12-Mar-2015
====================
- Added a complete statistical VerliHub (verlihub) graph. [#72]
- Added a complete graph for Varnish proxy cache.
	(suggested by Dan Criel, dancriel AT gmail.com)
- Improved 'port' option documentation of the Nginx graph in the man page of
  monitorix.conf.
	(thanks to Claude Nadon, claude AT ws01.info)
- Improved '<devmap>' option documentation of the FS graph in the man page of
  monitorix.conf.
	(thanks to Claude Nadon, claude AT ws01.info)
- Improved the way how are detected the process names in Process.pm module. Now
  the output of the 'command' parameter in the 'ps' command is used to match
  the process names.
	(suggested by Julien Flatrès, julien_flatres AT yahoo.fr)
- Zoomed graphs now honour the 'global_zoom' option, and also use the function
  RRDs::graphv to fit better in the browser pop up window. This is a feature
  only visible with RRDtool v1.3 or more.
	(suggested by Alexander Görtz, alex AT nyloc.de)
- Added an advice in 'htpasswd.pl' and 'monitorix.conf(5)' to not use the
  character colon ':' as part of the name or password since this character is
  used as field separator.
	(thanks to Dave Banthorpe, dave.banthorpe AT gmail.com for pointing this out)
- Added support for IPv6 in 'ports' graph using protocols 'tcp6' and 'upd6'.
  Note that 'ip6tables' command line is needed. [#67]
- Port graph now uses the wait lock option ('--wait') in newer 'iptables'
  versions. [#73]
- Added Dutch translation to monthly reports.
	(thanks to Jeroen Kik, monitorix AT steelyard.nl)
- Removed the option 'all' as network protocol in the 'port' graph. [#67]